chore(chatbot): fix expand/collapse transition

--- a/static/styles/chat.css
+++ b/static/styles/chat.css
@@ -30,6 +30,8 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1; 
+    transition: opacity 0.5s ease-in-out 0.2s;
+    opacity: 0;
 }
 
 #chaticon{
@@ -42,6 +44,15 @@
 .chat-box.collapsed {
     height: 70px;
     min-height: 70px
+}
+
+.chat-box.collapsed .chat-content {
+    opacity: 0;
+}
+
+.chat-box.expanded .chat-content {
+    transition: opacity 0.5s ease-in-out;
+    opacity: 1;
 }
 
 #toggle-chat-btn {
@@ -80,7 +91,6 @@
     position: relative;
     padding: 0px 20px;
     color: #212a53;
-
 }
 
 #user-input{
